# in-memory-database-system

./: .gitignore  CMakeLists.txt  Desing.md  README.md
src/: main.cpp
src/PipelineProcees/ProccesOfClasification/: ProceesOfClasification.cpp  ProceesOfClasification.h
src/PipelineProcees/ProccesOfTokenization/: ProccesOfTokenization.h  ProceesOfTokenization.cpp
src/PipelineProcees/ProccessOfExcute/: Execute.cpp  Execute.h
src/PipelineProcees/ProceesOfOrganizationTokens/: ProceesOfOrganizationTokens.cpp
src/PipelineProcees/ProceesOfValidationTokens/: ProceesOfValidationTokens.cpp  ProceesOfValidationTokens.h
src/Resources/: EnumsGlobal.h  Execute.h  GlobalVariables.h  SpecsStruct.h  TokenTypeStruct.h  tokenization.h  utils.h  validation.h
src/Resources/Commands/: list.h
src/SystemUtilites/CommandRegister/: CommandRegister.cpp  CommandRegister.h
src/SystemUtilites/EnumsClass/: TypeToken.h  ValidationError.h  ValuePolicy.h  ValueType.h
src/SystemUtilites/GeneralLibraries/: GeneralLibraries.h
src/SystemUtilites/MessageErrorDetail/: MessageError.cpp  MessageError.h
src/SystemUtilites/OptionRegistry/: OptionRegistry.cpp  OptionRegistry.h
src/SystemUtilites/Structs/: CommandMetaData.h  DataError.h  GroupDataValidation.h  OptionMetaData.h  Token.h  TokenGroup.h
src/Test/: ClasificationDataTokenTest.cpp
src/Utils/IsValidatedDate/: IsValidatedDate.cpp  IsValidatedDate.h
src/Utils/RegisterAllCommands/: RegisterAllCommands.cpp  RegisterAllCommands.h
src/Utils/RegisterAllError/: RegisterAllError.cpp  RegisterAllError.h
(+6 files in other folders)
